Domain refactor.